objects/User.object
<CustomObject><fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>AccountName2__c</fullName>
        <label>AccountName2</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>AccountName__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_Id_Formula__c</fullName>
        <description>Account Id of the current user (if any)</description>
        <formula>Contact.AccountId</formula>
        <inlineHelpText>Account Id of the current user (if any)</inlineHelpText>
        <label>Account Id</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Branding_Template__c</fullName>
        <description>The template used for branding for this user.</description>
        <label>Branding Template</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Consumer_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumer User</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ContactId__c</fullName>
        <formula>ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactId</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Key_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users who are often employed in demos.  Added to created "Key Users" list view.</description>
        <label>Key User</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Link_to_User__c</fullName>
        <formula>HYPERLINK("/" &amp; Id &amp; "?noredirect=1",  FirstName &amp; " " &amp; LastName, "_self")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to User</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Manager_PTO__c</fullName>
        <label>Manager (PTO)</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields><fields>
        <fullName>Show_on_Checkin_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Checkin Map</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>TrialforceDate__c</fullName>
        <label>TrialforceDate</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Work_com_Points__c</fullName>
        <description>This field contains the current Work.com Points that have been accumulated for this User.</description>
        <inlineHelpText>This field contains the current Work.com Points that have been accumulated for this User.</inlineHelpText>
        <label>Work.com Points</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>sales_management__c</fullName>
        <label>Sales Management</label>
        <relationshipName>R00N4100000Giun1EAB</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><externalSharingModel>Private</externalSharingModel><sharingModel>Read</sharingModel><listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>notContain</operation>
            <value>SDO_</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>SDO_</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>SDO_</value>
        </filters>
        <label>All Users</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>CommunityUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Community</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Community Users</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Key_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Key_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>*Key Users</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>PartnerUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Partner Users</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>SDO_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>SDO_</value>
        </filters>
        <label>SDO Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>SDO_Users</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>Sales_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Sales,East,West,Central</value>
        </filters>
        <label>Sales Users</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Service_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Support,Engineer,Service</value>
        </filters>
        <label>Service Users</label>
        <language>en_US</language>
    </listViews></CustomObject>